# fossier

./: .fossier.db  .gitignore  LICENSE.md  Makefile  README.md  VOUCHED.td  action.yml  fossier.toml  fossier.toml.example  pyproject.toml
.github/workflows/: ci.yml  fossier-scan.yml  fossier.yml
src/fossier/: __init__.py  __main__.py  action.py  cli.py  codeowners.py  comment_commands.py  config.py  db.py  gh_cli.py  github_api.py  models.py  outcomes.py  pipeline.py  registry_client.py  scoring.py  signals.py  trust.py  trustdown.py
tests/: conftest.py  test_action.py  test_cli.py  test_codeowners.py  test_comment_commands.py  test_config.py  test_db.py  test_github_api.py  test_outcomes.py  test_pipeline.py  test_registry_client.py  test_scoring.py  test_signals.py  test_trust.py  test_trustdown.py
