[project]
name = "fossier"
version = "0.1.0"
description = "GitHub spam prevention system for open source repositories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyturso",
    "httpx>=0.27",
]

[project.scripts]
fossier = "fossier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fossier"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
