[project]
name = "fossier"
version = "0.0.1"
description = "GitHub spam prevention system for open source repositories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "PThorpe92", email = "preston@turso.tech" },
]
dependencies = [
    "pyturso",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/PThorpe92/fossier"
Repository = "https://github.com/PThorpe92/fossier"
Issues = "https://github.com/PThorpe92/fossier/issues"

[project.scripts]
fossier = "fossier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fossier"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
